Cleanup: null-safety, refactors and minor fixes
Upgraded Jackson to 2.19.0 and shrinkwrap-resolver to 3.3.4, then swept through the codebase fixing things that had been accumulating. DocumentMapper now returns empty collections instead of null, List.copyOf replaces most Collections.unmodifiableList calls, and MongoJobStore gains getPriorityBoostIntervalMinutes() parsed from an env var. Tests follow the API changes.

Signed-off-by: Jonathan Putney <jonathan@putney.io>